--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/delta_job_tracker}
     username: ${DB_USER:delta}
     password: ${DB_PASSWORD:delta}
+    driver-class-name: org.postgresql.Driver
+
   flyway:
     enabled: true
     locations: classpath:db/migration
@@ -10,45 +12,13 @@ spring:
 server:
   port: ${PORT:8080}
 
-logging:
-  level:
-    com.delta.jobtracker: INFO
-
 crawler:
-  user-agent: delta-job-tracker/0.1 (+contact)
+  user-agent: ${CRAWLER_USER_AGENT:delta-job-tracker-bot/0.1}
   per-host-delay-ms: 1000
   global-concurrency: 5
   request-timeout-seconds: 20
-  api:
-    default-company-limit: 50
-  automation:
-    resolve-missing-domains: true
-    discover-careers-endpoints: true
-    resolve-limit: 200
-    discover-limit: 200
-  domain-resolution:
-    default-limit: 50
-    batch-size: 50
-    wdqs-min-delay-ms: 2000
-  careers-discovery:
-    default-limit: 50
-    max-candidates-per-company: 60
-  robots:
-    fail-open: false
-    allow-ats-adapter-when-unavailable: true
-  sitemap:
-    max-depth: 3
-    max-sitemaps: 50
-    max-urls-per-domain: 200
-  extraction:
-    max-job-pages: 50
+
+  # these paths match your repo layout
   data:
-    sp500-wikipedia-url: https://en.wikipedia.org/wiki/List_of_S%26P_500_companies
     sp500-csv: ../data/sp500_constituents.csv
     domains-csv: ../data/domains.csv
-  cli:
-    run: false
-    ingest-before-crawl: true
-    tickers: ""
-    limit: 5
-    exit-after-run: true
