--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -28,6 +28,14 @@ crawler:
   active-run-minutes: 10
   stale-run-minutes: 10
 
+  daemon:
+    enabled: false
+    worker-count: 8
+    poll-interval-ms: 1000
+    lock-ttl-seconds: 600
+    success-interval-minutes: 60
+    failure-backoff-minutes: [5, 15, 60, 360, 1440]
+
   # these paths match your repo layout
   data:
     sp500-csv: ../data/sp500_constituents.csv
